--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <a href="#Contact">Contact</a>
     </nav>
         <div class="social-icons">
-            <a href="#"><img src="element/linkedin.png" alt="LinkedIn" width="20" height="19"></a>
-            <a href="#"><img src="element/github.png" alt="GitHub" width="20" height="19"></a>
-            <a href="#"><img src="element/email.png" alt="Email" width="28" height="17"></a>
+            <a href="#"><img src="Element/linkedin.png" alt="LinkedIn" width="20" height="19"></a>
+            <a href="#"><img src="Element/github.png" alt="GitHub" width="20" height="19"></a>
+            <a href="#"><img src="Element/email.png" alt="Email" width="28" height="17"></a>
         </div>
     </header>
 
@@ -44,7 +44,7 @@
     <h1>About Me</h1>
     <div class="content-container">
         <div class="image-container">
-            <img src="element/yogafahrizal.png" alt="Yoga Fahrizal" width="300">
+            <img src="Element/yogafahrizal.png" alt="Yoga Fahrizal" width="300">
         </div>
         <div class="text-container">
             <p>
@@ -59,8 +59,8 @@
 <section class="skills-section">
     <h1>Skills</h1>
     <div>
-        <img src="element/progress.png" alt="Activity Image" width="100">
-        <img src="element/logoapk.png" alt="My Image" width="100">
+        <img src="Element/progress.png" alt="Activity Image" width="100">
+        <img src="Element/logoapk.png" alt="My Image" width="100">
     </div>
 </section>
 
@@ -75,23 +75,23 @@
  <section class="testimonial-section">
         <h2>Trusted Partner</h2>
         <div style="text-align: center;">
-            <img src="element/logospot.png" alt="Logo Spot" width="287" height="68" style="margin-top: 23px;">
+            <img src="Element/logospot.png" alt="Logo Spot" width="287" height="68" style="margin-top: 23px;">
         </div>
         <h1>Testimonials</h1>
         <div class="container">
             <div class="rectangle">
                 <p>"Desainer grafis ini sangat kreatif dan profesional. Karyanya memikat, inovatif, dan memberikan dampak visual yang luar biasa."</p>
-                <img src="element/lisa.png" alt="Lalisa" width="100">
+                <img src="Element/lisa.png" alt="Lalisa" width="100">
                 <p class="name">Lalisa<br>CEO LLOUD</p>
             </div>
             <div class="rectangle">
                 <p>Desain grafisnya luar biasa! Kreativitasnya memukau, detailnya sempurna, dan memberikan kesan profesional yang luar biasa. Bravo!</p>
-                <img src="element/roses.png" alt="Rose'" width="100">
+                <img src="Element/roses.png" alt="Rose'" width="100">
                 <p class="name">Rose'<br>CEO Odd Atelier</p>
             </div>
             <div class="rectangle">
                 <p>Desain grafisnya luar biasa! Kreativitasnya memukau, detailnya sempurna, dan memberikan kesan profesional yang luar biasa. Bravo!</p>
-                <img src="element/jenie.png" alt="Kim Jennie" width="100">
+                <img src="Element/jenie.png" alt="Kim Jennie" width="100">
                 <p class="name">Kim Jennie<br>CEO Blisso</p>
             </div>
         </div>
@@ -102,15 +102,15 @@
         <h1>Portofolio</h1>
         <div class="container">
             <div style="text-align: center; width: 30%;">
-                <img src="element/Ilustrator.png" alt="Illustrator" width="200">
+                <img src="Element/ilustrator.png" alt="Illustrator" width="200">
                 <p>Illustrator</p>
             </div>
             <div style="text-align: center; width: 30%;">
-                <img src="element/webdesign.png" alt="Web Design" width="200">
+                <img src="Element/webdesign.png" alt="Web Design" width="200">
                 <p>Web Design</p>
             </div>
             <div style="text-align: center; width: 30%;">
-                <img src="element/productdesign.png" alt="Product Design" width="200">
+                <img src="Element/productdesign.png" alt="Product Design" width="200">
                 <p>Product Design</p>
             </div>
         </div>
@@ -141,14 +141,14 @@
         </div>
     </div>
     <div class="logo">
-        <img src="element/logo_yoga.png" alt="Logo" width="293" height="132">
+        <img src="Element/logo_yoga.png" alt="Logo" width="293" height="132">
     </div>
     <section class="section-footer">
         <div class="social-media">
-            <img src="element/in.png" alt="LinkedIn" width="50">
-            <img src="element/gth.png" alt="GitHub" width="50">
-            <img src="element/ig.png" alt="Instagram" width="50">
-            <img src="element/fb.png" alt="Facebook" width="50">
+            <img src="Element/in.png" alt="LinkedIn" width="50">
+            <img src="Element/gth.png" alt="GitHub" width="50">
+            <img src="Element/ig.png" alt="Instagram" width="50">
+            <img src="Element/fb.png" alt="Facebook" width="50">
         </div>
     </section>
     <p style="text-align: center;">Copyright©Yoga.Fahrizal.All Rights Reserved.</p>
